--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -1,1 +1,185 @@
 {% extends 'base.html' %}
+{% load static %} 
+
+{% block meta %}
+<title>GMDb: Find Your Movies</title>
+<style>
+    .scrolling-wrapper {
+        height: 200px;
+        padding-right: 5px;
+        padding-left: 5px;
+        display: flex;
+        overflow-x: auto;
+        position: relative; /* To position the arrows */
+    }
+
+    .scrolling-wrapper::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+    }
+    .scrolling-wrapper::-webkit-scrollbar-button {
+        width: 4px;
+    }
+
+    .scrolling-wrapper .item {
+        min-width: 150px;
+        height: 200px;
+        line-height: 110px;
+        text-align: center;
+        background-color: white;
+        margin-right: 5px;
+    }
+
+</style>
+{% endblock meta %}
+
+{% block content %}
+<body
+  style="background-color: #101010; width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; font-family: 'Helvetica Neue';"
+>
+    <div class="films-bg" 
+        style="background-image: url('/static/images/bg-image.jpg'); background-color: rgba(0, 0, 0, 0.6); width: 100%; height: 100vh; background-repeat: no-repeat; background-size: cover; background-blend-mode: darken;">
+         <div class="h-100 d-flex flex-column align-items-center justify-content-center">
+            <h1 class="mb-4" style="font-weight: bold; color: whitesmoke;">GMDb: Graph Movie Database</h1>
+            <div class="input-group rounded w-50">
+                <input type="search" class="form-control rounded-pill p-3" placeholder="What movie are you looking for?" aria-label="What movie are you looking for?" aria-describedby="search-addon" />
+                <span class="input-group-text border-0 rounded-pill" id="search-addon">
+                  <i class="fas fa-search"></i>
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <div class="container movie-recommendation mt-4 ">
+        <h3 style="color: whitesmoke;">Top 20 Highest Rating Movies</h3>
+        <div class="mt-2 scrolling-wrapper">
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+        </div>
+    </div>
+
+    <div class="container movie-recommendation mt-4 ">
+        <h3 style="color: whitesmoke;">Top 20 Highest Grossing Movies</h3>
+        <div class="mt-2 scrolling-wrapper">
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+        </div>
+    </div>
+
+    <div class="container movie-recommendation mt-4 ">
+        <h3 style="color: whitesmoke;">Romance Movies</h3>
+        <div class="mt-2 scrolling-wrapper">
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+        </div>
+    </div>
+
+    <div class="container movie-recommendation mt-4 ">
+        <h3 style="color: whitesmoke;">Comedy Movies</h3>
+        <div class="mt-2 scrolling-wrapper">
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+        </div>
+    </div>
+
+    <div class="container movie-recommendation my-4 ">
+        <h3 style="color: whitesmoke;">Action Movies</h3>
+        <div class="mt-2 scrolling-wrapper">
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+            <div class="item card"><h2>Card</h2></div>
+        </div>
+    </div>
+</body>
+{% endblock content %}
+
+<script>
+    function scrollWrapper(direction) {
+        const wrapper = document.querySelector('.scrolling-wrapper');
+        const scrollAmount = 2; // How much to scroll when clicking the arrow
+        if (direction === 'left') {
+            wrapper.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
+        } else {
+            wrapper.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+        }
+    }
+</script>
