--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -4,21 +4,22 @@
 {% block meta %}
 <title>GMDb: Find Your Movies</title>
 <style>
+    .scrolling-wrapper-container {
+        position: relative;
+    }
+
     .scrolling-wrapper {
         height: 200px;
         padding-right: 5px;
         padding-left: 5px;
         display: flex;
         overflow-x: auto;
-        position: relative; /* To position the arrows */
+        scroll-behavior: smooth;
     }
 
     .scrolling-wrapper::-webkit-scrollbar {
         width: 0;
         height: 0;
-    }
-    .scrolling-wrapper::-webkit-scrollbar-button {
-        width: 4px;
     }
 
     .scrolling-wrapper .item {
@@ -28,15 +29,41 @@
         text-align: center;
         background-color: white;
         margin-right: 5px;
+        flex-shrink: 0;
     }
 
+    .scroll-arrow {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(255, 255, 255, 0.2);
+        color: white;
+        border: none;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .scroll-arrow:hover {
+        background-color: rgba(255, 255, 255, 0.4);
+    }
+
+    .scroll-left {
+        left: -50px;
+    }
+
+    .scroll-right {
+        right: -50px;
+    }
 </style>
 {% endblock meta %}
 
 {% block content %}
-<body
-  style="background-color: #101010; width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; font-family: 'Helvetica Neue';"
->
+<body style="background-color: #101010; width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; font-family: 'Helvetica Neue';">
     <div class="films-bg" 
         style="background-image: url('/static/images/bg-image.jpg'); background-color: rgba(0, 0, 0, 0.6); width: 100%; height: 100vh; background-repeat: no-repeat; background-size: cover; background-blend-mode: darken;">
          <div class="h-100 d-flex flex-column align-items-center justify-content-center">
@@ -50,136 +77,178 @@
         </div>
     </div>
 
-    <div class="container movie-recommendation mt-4 ">
+    <div class="container movie-recommendation mt-4">
         <h3 style="color: whitesmoke;">Top 20 Highest Rating Movies</h3>
-        <div class="mt-2 scrolling-wrapper">
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
+        <div class="scrolling-wrapper-container">
+            <button class="scroll-arrow scroll-left" onclick="scrollMovies(this, 'left')">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <div class="scrolling-wrapper">
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+            </div>
+            <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
+                <i class="fas fa-chevron-right"></i>
+            </button>
         </div>
     </div>
 
-    <div class="container movie-recommendation mt-4 ">
+    <div class="container movie-recommendation mt-4">
         <h3 style="color: whitesmoke;">Top 20 Highest Grossing Movies</h3>
-        <div class="mt-2 scrolling-wrapper">
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
+        <div class="scrolling-wrapper-container">
+            <button class="scroll-arrow scroll-left" onclick="scrollMovies(this, 'left')">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <div class="scrolling-wrapper">
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+            </div>
+            <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
+                <i class="fas fa-chevron-right"></i>
+            </button>
         </div>
     </div>
 
-    <div class="container movie-recommendation mt-4 ">
+    <div class="container movie-recommendation mt-4">
         <h3 style="color: whitesmoke;">Romance Movies</h3>
-        <div class="mt-2 scrolling-wrapper">
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
+        <div class="scrolling-wrapper-container">
+            <button class="scroll-arrow scroll-left" onclick="scrollMovies(this, 'left')">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <div class="scrolling-wrapper">
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+            </div>
+            <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
+                <i class="fas fa-chevron-right"></i>
+            </button>
         </div>
     </div>
 
-    <div class="container movie-recommendation mt-4 ">
+    <div class="container movie-recommendation mt-4">
         <h3 style="color: whitesmoke;">Comedy Movies</h3>
-        <div class="mt-2 scrolling-wrapper">
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
+        <div class="scrolling-wrapper-container">
+            <button class="scroll-arrow scroll-left" onclick="scrollMovies(this, 'left')">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <div class="scrolling-wrapper">
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+            </div>
+            <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
+                <i class="fas fa-chevron-right"></i>
+            </button>
         </div>
     </div>
 
-    <div class="container movie-recommendation my-4 ">
+    <div class="container movie-recommendation my-4">
         <h3 style="color: whitesmoke;">Action Movies</h3>
-        <div class="mt-2 scrolling-wrapper">
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
-            <div class="item card"><h2>Card</h2></div>
+        <div class="scrolling-wrapper-container">
+            <button class="scroll-arrow scroll-left" onclick="scrollMovies(this, 'left')">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <div class="scrolling-wrapper">
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+                <div class="item card"><h2>Card</h2></div>
+            </div>
+            <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
+                <i class="fas fa-chevron-right"></i>
+            </button>
         </div>
     </div>
-</body>
-{% endblock content %}
 
-<script>
-    function scrollWrapper(direction) {
-        const wrapper = document.querySelector('.scrolling-wrapper');
-        const scrollAmount = 2; // How much to scroll when clicking the arrow
+    <script>
+    function scrollMovies(btn, direction) {
+        // Find the scrolling wrapper associated with this button
+        const scrollWrapper = btn.parentElement.querySelector('.scrolling-wrapper');
+        const scrollAmount = scrollWrapper.clientWidth * 0.8;
+        
         if (direction === 'left') {
-            wrapper.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
+            scrollWrapper.scrollLeft -= scrollAmount;
         } else {
-            wrapper.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+            scrollWrapper.scrollLeft += scrollAmount;
         }
     }
-</script>
+    </script>
+</body>
+{% endblock content %}
