--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -9,7 +9,7 @@
     }
 
     .scrolling-wrapper {
-        height: 200px;
+        height: 240px;
         padding-right: 5px;
         padding-left: 5px;
         display: flex;
@@ -23,11 +23,10 @@
     }
 
     .scrolling-wrapper .item {
-        min-width: 150px;
-        height: 200px;
-        line-height: 110px;
+        width: 150px;
+        height: 215px;
+        line-height: 120px;
         text-align: center;
-        background-color: white;
         margin-right: 5px;
         flex-shrink: 0;
     }
@@ -59,6 +58,13 @@
     .scroll-right {
         right: -50px;
     }
+
+    .card-img-top {
+        width: 100%; 
+        height: 213.5px; 
+        object-fit: cover; 
+        object-position: center; /* Center the image within the container */
+    }
 </style>
 {% endblock meta %}
 
@@ -84,24 +90,13 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
             <div class="scrolling-wrapper">
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
+                {% for item in top_20_rating %}
+                <div class="item card">
+                    <a href="#">
+                        <img class="card-img-top rounded" src="{{ item.poster }}" alt="Movie Image" width="100" height="200"/>
+                    </a>
+                </div>
+                {% endfor %}
             </div>
             <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
                 <i class="fas fa-chevron-right"></i>
