--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -63,7 +63,7 @@
         width: 100%; 
         height: 213.5px; 
         object-fit: cover; 
-        object-position: center; /* Center the image within the container */
+        object-position: center; 
     }
 </style>
 {% endblock meta %}
@@ -76,9 +76,9 @@
             <h1 class="mb-4" style="font-weight: bold; color: whitesmoke;">GMDb: Graph Movie Database</h1>
             <div class="input-group rounded w-50">
                 <input type="search" class="form-control rounded-pill p-3" placeholder="What movie are you looking for?" aria-label="What movie are you looking for?" aria-describedby="search-addon" />
-                <span class="input-group-text border-0 rounded-pill" id="search-addon">
+                <button class="input-group-text border-0 rounded-pill" id="search-addon">
                   <i class="fas fa-search"></i>
-                </span>
+                </button>
             </div>
         </div>
     </div>
@@ -93,7 +93,7 @@
                 {% for item in top_20_rating %}
                 <div class="item card">
                     <a href="#">
-                        <img class="card-img-top rounded" src="{{ item.poster }}" alt="Movie Image" width="100" height="200"/>
+                        <img class="card-img-top rounded" src="{{ item.poster }}" alt="{{ item.movieName }}" width="100" height="200"/>
                     </a>
                 </div>
                 {% endfor %}
@@ -111,24 +111,13 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
             <div class="scrolling-wrapper">
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
+                {% for item in top_20_grossing %}
+                <div class="item card">
+                    <a href="#">
+                        <img class="card-img-top rounded" src="{{ item.poster }}" alt="{{ item.movieName }}" width="100" height="200"/>
+                    </a>
+                </div>
+                {% endfor %}
             </div>
             <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
                 <i class="fas fa-chevron-right"></i>
@@ -143,24 +132,13 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
             <div class="scrolling-wrapper">
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
+                {% for item in romance %}
+                <div class="item card">
+                    <a href="#">
+                        <img class="card-img-top rounded" src="{{ item.poster }}" alt="{{ item.movieName }}" width="100" height="200"/>
+                    </a>
+                </div>
+                {% endfor %}
             </div>
             <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
                 <i class="fas fa-chevron-right"></i>
@@ -175,24 +153,13 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
             <div class="scrolling-wrapper">
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
+                {% for item in comedy %}
+                <div class="item card">
+                    <a href="#">
+                        <img class="card-img-top rounded" src="{{ item.poster }}" alt="{{ item.movieName }}" width="100" height="200"/>
+                    </a>
+                </div>
+                {% endfor %}
             </div>
             <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
                 <i class="fas fa-chevron-right"></i>
@@ -207,24 +174,13 @@
                 <i class="fas fa-chevron-left"></i>
             </button>
             <div class="scrolling-wrapper">
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
-                <div class="item card"><h2>Card</h2></div>
+                {% for item in action %}
+                <div class="item card">
+                    <a href="#">
+                        <img class="card-img-top rounded" src="{{ item.poster }}" alt="{{ item.movieName }}" width="100" height="200"/>
+                    </a>
+                </div>
+                {% endfor %}
             </div>
             <button class="scroll-arrow scroll-right" onclick="scrollMovies(this, 'right')">
                 <i class="fas fa-chevron-right"></i>
