--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -29,6 +29,7 @@
         text-align: center;
         margin-right: 5px;
         flex-shrink: 0;
+        background-color: black;
     }
 
     .scroll-arrow {
@@ -71,7 +72,12 @@
 {% block content %}
 <body style="background-color: #101010; width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; font-family: 'Helvetica Neue';">
     <div class="films-bg" 
-        style="background-image: url('/static/images/bg-image.jpg'); background-color: rgba(0, 0, 0, 0.6); width: 100%; height: 100vh; background-repeat: no-repeat; background-size: cover; background-blend-mode: darken;">
+        style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(16, 16, 16, 0.9) 70%, #101010 95%), url('/static/images/bg-image.jpg');
+           background-color: rgba(0, 0, 0, 0.6); 
+           width: 100%; 
+           height: 100vh; 
+           background-repeat: no-repeat; 
+           background-size: cover;">
          <div class="h-100 d-flex flex-column align-items-center justify-content-center">
             <h1 class="mb-4" style="font-weight: bold; color: whitesmoke;">GMDb: Graph Movie Database</h1>
             <div class="input-group rounded w-50">
