--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -123,7 +123,7 @@
                 <div class="scrolling-wrapper">
                     {% for item in section.items %}
                     <div class="item card">
-                        <a href="#">
+                        <a href="{% url 'gmdb:movie_detail' item.movieName %}">
                             <img class="card-img-top rounded" src="{{ item.poster }}" alt="{{ item.movieName }}" width="100" height="200"/>
                         </a>
                     </div>
