Progress di halaman detail, buat header sama, refactoring, dll

--- a/gmdb/templates/movie-detail.html
+++ b/gmdb/templates/movie-detail.html
@@ -1,16 +1,127 @@
 {% extends 'base.html' %}
-{% load static %} 
+{% load static %}
 
 {% block meta %}
-<title>Nama Film</title>
+<title>{{ movie_name }}</title>
 {% endblock meta %}
 
 {% block content %}
+
+<style>
+    .infobox {
+        display: flex;
+        flex-direction: column;
+        float: right;
+        clear: right;
+        margin-left: 1rem;
+        background-color: rgba(255, 255, 255, 0.2);;
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        border-radius: .3rem;
+        font-size: 85%;
+        width: 22rem;
+        padding: 0.25rem;
+    }
+
+    .infobox table {
+        width: 100%;
+        margin-bottom: 0;
+        border-spacing: 0.25rem;
+        border-collapse: separate;
+    }
+
+    .infobox table ul,
+    .infobox table ol {
+        margin-bottom: 0;
+        padding-left: 0.675rem;
+    }
+
+    .infobox table tr {
+        margin-bottom: 0.5rem;
+    }
+
+    .infobox table td {
+        vertical-align: top;
+    }
+
+    .infobox>* {
+        margin-bottom: 0.5rem;
+    }
+
+    .infobox>*:last-child {
+        margin-bottom: 0;
+    }
+
+    .infobox-img {
+        width: 100%;
+    }
+
+    .infobox-name {
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .infobox-label {
+        font-weight: bold;
+    }
+
+    .infobox-data:only-child {
+        text-align: center;
+    }
+</style>
+
 <body>
-    <div class="container mt-5">
-        <div class="mb-3">
-            <span onclick="history.back()" style="font-size:20px; cursor: pointer;">&#8592; Go Back</span>
+    {% include 'header.html' %}
+    <div class="container my-4">
+        <h2>{{ movie_name }}</h2>
+        <p>{{ release_year }} · {{ certification }} · {{ runtime.text }}</p>
+
+        <div class="infobox">
+            <table class="unstyled">
+                <tbody>
+                    <tr>
+                        <td class="infobox-name" colspan="2">
+                            {{ movie_name }}
+                        </td>
+                    </tr>
+
+                    {% if poster %}
+                    <tr>
+                        <td colspan="2">
+                            <img src="{{ poster }}" alt="Movie Poster" class="infobox-img">
+                        </td>
+                    </tr>
+                    {% endif %}
+                    
+                    {% for entry in infobox_data %}
+
+                    <tr>
+                        <td class="infobox-label">{{ entry.label }}</td>
+                        <td class="infobox-data">
+                            {% if entry.data %}
+                                {{ entry.data }}
+                            {% else %}
+                                <i>No information</i>
+                            {% endif %}
+                        </td>
+                    </tr>
+
+                    {% endfor %}
+
+                    <tr>
+                        <td class="infobox-data" colspan="2">
+
+                            {% for entry in infobox_links %}
+                            <a href="{{ entry.url }}" rel="noopener" target="_blank">{{ entry.label }}</a>
+                            {% if not forloop.last %}·{% endif %}
+
+                            {% endfor %}
+
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+        <!-- 
 
         <div class="card">
             <div class="row g-0">
@@ -27,8 +138,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+        <pre class="text-wrap">{{ result }}</pre>
     </div>
 </body>
 {% endblock content%}
-
