--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
   <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/@forevolve/bootstrap-dark@4.0.2/dist/js/bootstrap.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/jquery-toast-plugin@1.3.2/dist/jquery.toast.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/iconify-icon@2.1.0/dist/iconify-icon.min.js"></script>
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   {% block meta %} {% endblock meta %}
 </head>
 
