fix: refactor query for home page and search

--- a/gmdb/templates/search.html
+++ b/gmdb/templates/search.html
@@ -155,7 +155,7 @@
             document.getElementById('movie-info').innerHTML = `
                 <strong>Director:</strong> ${director || 'Unknown'}<br>
                 <strong>IMDb Rating:</strong> ${imdbRating || 'N/A'}<br>
-                <strong>Runtime:</strong> ${runtime} minutes<br>
+                <strong>Runtime:</strong> ${runtime}<br>
                 <strong>Release Year:</strong> ${releasedYear || 'Unknown'}
             `;
 
