fix: search bar styling

--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -103,8 +103,8 @@
             </h1>
             <div class="input-group rounded">
                 <form class="d-flex w-100 mr-2" action="{% url 'gmdb:search_movies' %}" method="GET">
-                    <input type="search" class="form-control rounded-pill p-3" placeholder="What movie are you looking for?" aria-label="What movie are you looking for?" aria-describedby="search-addon" name="q"/>
-                    <button class="input-group-text border-0 rounded-pill" id="search-addon" type="submit">
+                    <input type="search" class="form-control p-3" style="border-top-left-radius: 50em; border-bottom-left-radius: 50em;" placeholder="What movie are you looking for?" aria-label="What movie are you looking for?" aria-describedby="search-addon" name="q"/>
+                    <button class="input-group-text border-left-0" style="border-top-right-radius: 50em; border-bottom-right-radius: 50em;" id="search-addon" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
