--- a/gmdb/templates/header.html
+++ b/gmdb/templates/header.html
@@ -14,8 +14,8 @@
 			</ul>
             <div class="form-inline rounded mx-2">
                 <form class="d-flex w-100" action="{% url 'gmdb:search_movies' %}" method="GET">
-                    <input type="search" class="form-control rounded-pill p-3" placeholder="Search" value="{{search_query}}" aria-label="Search" aria-describedby="search-addon" name="q"/>
-                    <button class="input-group-text border-0 rounded-pill" id="search-addon" type="submit">
+                    <input type="search" class="form-control p-3" style="border-top-left-radius: 50em; border-bottom-left-radius: 50em;" value="{{search_query}}" aria-label="Search" aria-describedby="search-addon" name="q"/>
+                    <button class="input-group-text border-left-0" style="border-top-right-radius: 50em; border-bottom-right-radius: 50em;" id="search-addon" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
